crates/tests/src/snapshots/fe_compiler_tests__compile_errors__non_pub_init.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: `__init__` function is not public
  ┌─ compile_errors/non_pub_init.fe:2:5
  │  
2 │ ╭     def __init__():
3 │ │         pass
  │ ╰────────────^ `__init__` function must be public
  │  
  = Hint: Add the `pub` modifier.
  = Example: `pub def __init__():`


