crates/tests/src/snapshots/fe_compiler_tests__compile_errors__overflow_i16_neg.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: literal out of range for `i16`
  ┌─ [snippet]:3:7
  │
3 │   i16(-32769)
  │       ^^^^^^ does not fit into type `i16`


