crates/tests/src/snapshots/fe_compiler_tests__compile_errors__return_addition_with_mixed_types.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: The types for this operation must be equal
  ┌─ compile_errors/return_addition_with_mixed_types.fe:3:16
  │
3 │         return x + y
  │                ^   ^


