crates/tests/src/snapshots/fe_compiler_tests__compile_errors__return_call_to_fn_without_return.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: expected function to return `u256` but was `()`
  ┌─ compile_errors/return_call_to_fn_without_return.fe:7:9
  │
7 │         return self.foo()
  │         ^^^^^^^^^^^^^^^^^


