crates/tests/src/snapshots/fe_compiler_tests__compile_errors__return_from_init.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: `__init__` function has incorrect return type
  ┌─ compile_errors/return_from_init.fe:2:27
  │
2 │     pub def __init__() -> i32:
  │                           ^^^ return type should be `()`
  │
  = Hint: Remove the return type specification.
  = Example: `pub def __init__():`

error: expected function to return `()` but was `u256`
  ┌─ compile_errors/return_from_init.fe:3:9
  │
3 │         return 0
  │         ^^^^^^^^


