crates/tests/src/snapshots/fe_compiler_tests__compile_errors__strict_boolean_if_else.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: `if` statement condition is not bool
  ┌─ compile_errors/strict_boolean_if_else.fe:3:12
  │
3 │         if val:
  │            ^^^ this has type `u256`; expected type `bool`


